Correcting issue with msncolor v-alignment
Correcting issue with msncolor v-alignment in all pages.

--- a/styles/basic.css
+++ b/styles/basic.css
@@ -63,7 +63,7 @@ img {
 	border: 0;
 }
 span {
-	vertical-align: middle;
+	vertical-align: top;
 }
 .msncolor {
 	color: rgba(255,79,0,1.00);
